# unix_settings

./: .#.my.bashrc  .emacs  .gitconfig  .gitignore  .hgrc  .my.bashrc  .my.rosconsole  .my.rosconsole_backup  .my.rosconsole_backup2  .my.rosconsole_python  README.md
config/: 01-custom-aliases.yaml  01-dave-aliases.yaml  rosconsole.yaml  rosconsole.yaml.disabled  rosconsole.yaml.none
emacs/: dot.emacs  emacs_notes.txt
install/: .#ubuntu.sh  benchmarking.sh  compile_time_benchmarking.sh  mac_keyboard.sh  moveit.sh  truecrypt-install-local.sh  truecrypt-install.sh  truecrypt_fix.bash  ubuntu.sh  ubuntu12_04.sh  ubuntu_nate.sh  ws_jsk.sh
notes/: README.md  aliases.sh  bash.md  baxter.md  bloom.md  brew.txt  cmake.md  cmakenotes.md  cpp.md  cpp.txt  eigen.md  eigennotes.md  emacs.md  firefox.md  gdb.md  gdb.txt  gdb_example.md  git.md  git.txt  hg.md  i3.md  image.md  linux_backup.md  linux_backup.txt  linux_build.md  mac.md  mac.txt  matlab.md  moveit.md  openmp.md  openpgp.md  pulseaudio.txt  regex.txt  ros.md  ros.txt  ssh.md  sshfs.txt  svn.md  ubuntu.md  ubuntu.txt  (+12 more)
scripts/: amazon.sh  baxter.sh  bloom.sh  commit_moveit.sh  commit_ros.sh  debug_info_ubuntu.sh  eachws.sh  export_picknik.sh  for_loop_example.sh  git.sh  ompl_build.sh  omplapp  overwrite_ros_install.sh  ros.sh  ros_check_branch.sh  ros_clean.sh  ros_commit.sh  ros_compile.sh  slow_speed_video.sh  sync_computer_times.sh  (+1 more)
templates/: disclaimer.closed.cpp  disclaimer.cu.cpp  disclaimer.cu.py  disclaimer.jsk.cpp  package.xml  ros.cpp
templates/archive/: disclaimer.cu.cpp  disclaimer.jsk.cpp
(+94 files in other folders)
